# whisper_process

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: build.yml
transcribe/: logging.py
